--- a/app/src/main/res/layout/row_dhaba_list.xml
+++ b/app/src/main/res/layout/row_dhaba_list.xml
@@ -14,7 +14,7 @@
 
         <variable
             name="model"
-            type="com.transport.mall.model.DhabaDetailsModel" />
+            type="com.transport.mall.model.DhabaModel" />
 
         <variable
             name="callback"
