--- a/app/src/main/res/layout/dialog_request_for_call.xml
+++ b/app/src/main/res/layout/dialog_request_for_call.xml
@@ -13,40 +13,27 @@
             type="android.content.Context" />
     </data>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/_20sdp">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/chatCardView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:elevation="@dimen/_3sdp"
-            android:background="@drawable/grey_stroke"
-            android:layout_marginTop="@dimen/_20sdp"
-            app:cardBackgroundColor="@color/white">
+        android:padding="@dimen/_15sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/white_round_corners"
             android:orientation="vertical"
             android:paddingLeft="@dimen/_15sdp"
-            android:paddingRight="@dimen/_15sdp"
             android:paddingTop="@dimen/_20sdp"
+            android:paddingRight="@dimen/_15sdp"
             android:paddingBottom="@dimen/_20sdp">
-
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
-                android:layout_width="@dimen/_80sdp"
-                android:layout_height="@dimen/_80sdp"
+                android:layout_width="@dimen/_100sdp"
+                android:layout_height="@dimen/_100sdp"
                 android:layout_marginTop="@dimen/_20sdp"
-                android:src="@drawable/ic_profile_pic_placeholder"
+                android:src="@drawable/ic_helpline_pic"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,11 +42,11 @@
                 android:id="@+id/requestCallText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="@string/request_for_call"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_18ssp"
-                android:layout_marginTop="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/profile_image" />
@@ -68,18 +55,17 @@
                 android:id="@+id/enterPhoneText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
                 android:text="@string/enter_your_phone_number_where_we_can_call_you"
                 android:textColor="@color/grey1"
                 android:textSize="@dimen/_14ssp"
-                android:gravity="center"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:layout_marginEnd="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_15sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/requestCallText" />
-
 
 
             <com.google.android.material.textfield.TextInputEditText
@@ -89,12 +75,13 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:background="@drawable/grey_stroke"
                 android:fontFamily="@font/opensans_regular"
+                android:gravity="center"
                 android:hint="@string/phone_number"
-                android:inputType="text"
+                android:inputType="phone"
+                android:maxLength="13"
                 android:padding="@dimen/_10sdp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_14ssp"
-                android:gravity="center"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/enterPhoneText" />
@@ -118,9 +105,5 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </layout>
