--- a/app/src/main/res/layout/fragment_add_dhaba_step3.xml
+++ b/app/src/main/res/layout/fragment_add_dhaba_step3.xml
@@ -20,6 +20,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="@dimen/_5sdp"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
@@ -378,7 +379,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@drawable/primary_color_btn_selector"
-                android:text="Save Dhaba"
+                android:text="@string/next"
                 android:textAllCaps="false"
                 android:textColor="@color/white" />
 
@@ -388,7 +389,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginBottom="@dimen/_30sdp"
                 android:background="@drawable/default_btn_selector"
-                android:text="Save as Draft"
+                android:text="@string/save_as_draft"
                 android:textAllCaps="false"
                 android:textColor="@color/black" />
 
